--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -121,7 +121,8 @@
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                            actionListener="#{tdcto.nextPage}"
-                           update=":ctoForm:tdaccordian" process=":ctoForm:tdaccordian:accHolderTabV"/>
+                           update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                           process=":ctoForm:tdaccordian:accHolderTabV"/>
         </div>
         </div>
         
@@ -244,7 +245,8 @@
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                actionListener="#{tdcto.nextPage}"
-                               update=":ctoForm:tdaccordian" process=":ctoForm:tdaccordian:accHolderTabV"/>
+                               update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                               process=":ctoForm:tdaccordian:accHolderTabV"/>
         </div>
         </div>
         
