--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -157,7 +157,8 @@
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                actionListener="#{tdcto.nextPage}"
-                               update=":ctoForm:tdaccordian"  process=":ctoForm:tdaccordian:acctTypePanel"/>
+                               update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                               process=":ctoForm:tdaccordian:acctTypePanel"/>
 
             </div>
 
