--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -36,9 +36,6 @@
                                      required="false">
 
                         </p:inputText>
-                        <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
-                                      placeholder="Street Address 2">
-                         </p:inputText> -->
                     </div>
 
                     <div class="EmptyBox20"></div>
@@ -67,7 +64,7 @@
                                              styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                              style="width: 100%;"
                                              required="false">
-                                <p:ajax/>
+                                <p:ajax event="change" update="@this" />
                                 <f:selectItem itemLabel="Select State" itemValue=""
                                               noSelectionOption="true"/>
                                 <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
@@ -149,7 +146,7 @@
                             <p:selectOneMenu value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressState}"
                                              styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                              style="width: 100%;">
-                                <p:ajax/>
+                                <p:ajax event="change" update="@this" />
                                 <f:selectItem itemLabel="Select State" itemValue=""
                                               noSelectionOption="true"/>
                                 <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
@@ -179,7 +176,8 @@
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
-                                   update=":ctoForm:tdaccordian"  process=":ctoForm:tdaccordian:addresstab" />
+                                   update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                                   process=":ctoForm:tdaccordian:addresstab" />
                 </div>
             </p:panel>
         </p:tab>
@@ -251,7 +249,7 @@
                             <p:selectOneMenu value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressState}"
                                              styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                              style="width: 100%;">
-                                <p:ajax/>
+                                <p:ajax event="change" update="@this" />
                                 <f:selectItem itemLabel="Select State" itemValue=""
                                               noSelectionOption="true"/>
                                 <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
@@ -332,7 +330,7 @@
                                 <p:selectOneMenu value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressState}"
                                                  styleClass="CustomWidthFA-Responsive FundAccountDropdownUI formpageDropdown"
                                                  style="width: 100%;">
-                                    <p:ajax/>
+                                    <p:ajax event="change" update="@this" />
                                     <f:selectItem itemLabel="Select State" itemValue=""
                                                   noSelectionOption="true"/>
                                     <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
@@ -363,7 +361,8 @@
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
-                                   update=":ctoForm:tdaccordian"  process=":ctoForm:tdaccordian:addresstab" />
+                                   update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                                   process=":ctoForm:tdaccordian:addresstab" />
                 </div>
             </p:panel>
 
