--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -161,7 +161,7 @@
                         <p:selectOneMenu styleClass="FundAccountDropdownUI formpageDropdown"
                                          value="#{tdcto.tdMasterData.owneremploymentDetail.employerState}"
                                          style="width: 100%;">
-                            <p:ajax/>
+                            <p:ajax event="change" update="@this" />
                             <f:selectItem itemLabel="Select State" itemValue=""
                                           noSelectionOption="true"/>
                             <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
@@ -191,8 +191,9 @@
                            update=":ctoForm:tdaccordian"  process="@this"/>
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                           actionListener="#{tdcto.nextPage}" process=":ctoForm:tdaccordian:employmenttab"
-                           update=":ctoForm:tdaccordian"/>
+                           actionListener="#{tdcto.nextPage}"
+                           update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                           process=":ctoForm:tdaccordian:employmenttab"/>
         </div>
         </div>
     </p:panel>
@@ -332,7 +333,7 @@
                             <p:selectOneMenu styleClass="FundAccountDropdownUI formpageDropdown"
                                              value="#{tdcto.tdMasterData.jointEmploymentDetail.employerState}"
                                              style="width: 100%;"  >
-                                <p:ajax/>
+                                <p:ajax event="change" update="@this" />
                                 <f:selectItem itemLabel="Select State" itemValue=""
                                               noSelectionOption="true"/>
                                 <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
@@ -360,8 +361,9 @@
                        update=":ctoForm:tdaccordian"  process="@this"/>
 
         <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                       actionListener="#{tdcto.nextPage}" process=":ctoForm:tdaccordian:employmenttab"
-                       update=":ctoForm:tdaccordian"/>
+                       actionListener="#{tdcto.nextPage}"
+                       update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
+                       process=":ctoForm:tdaccordian:employmenttab"/>
             </div>
             </div>
 
