--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/overview.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/overview.xhtml
@@ -39,7 +39,8 @@
                                             <p:chart type="pie" model="#{tcmpos.pieModel}" styleClass="PieGraphPosition"
                                                      style="height:200px; width: 100%; border:0!important;"
                                                      rendered="#{tcmpos.pieModel != null}"
-                                                     responsive="true"/>
+                                                     responsive="true"
+                                                     extender="pie_extensions"/>
                                         </div>
                                     </div>
                                     <div class="Container50 Responsive50"><!-- ROHIT's CHANGE -->
