--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -119,7 +119,7 @@
 
                         </div>
                         <div class="Container100 saveNopenBtn" style="text-align: center;">
-                            <p:commandButton value="Save and Open Account"
+                            <p:commandButton value="Submit to TD Ameritrade"
                                              update=":ctoForm:tdaccordian, :ctoForm:errorMsg" process="@this"
                                              actionListener="#{tdcto.openAccount}"
                                              styleClass="text-align: center" />
